--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "node-sass": "^6.0.1",
+    "sass-loader": "^10",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.3",
+    "vue-snotify": "^3.2.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
